<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="@dimen/top_layout_margin"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/iv_logo"
        android:layout_marginTop="05dp"
        android:textStyle="bold"
        android:textSize="@dimen/login"
        android:text="@string/userdetails"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/roundedcurveedges"
            android:elevation="@dimen/elevation"
            android:layout_margin="@dimen/top_layout_margin">

            <Button
                android:id="@+id/btn_updateuserprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/btn_userdetails"
                android:layout_gravity="center"
                android:visibility="visible"
                android:background="?attr/selectableItemBackgroundBorderless"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/roundedcurveedges"
            android:elevation="@dimen/elevation"
            android:layout_margin="@dimen/top_layout_margin">

            <Button
                android:id="@+id/btn_addnewmedicine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/btn_addmedicne"
                android:layout_gravity="center"
                android:visibility="visible"
                android:background="?attr/selectableItemBackgroundBorderless"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/roundedcurveedges"
            android:elevation="@dimen/elevation"
            android:layout_margin="@dimen/top_layout_margin">

            <Button
                android:id="@+id/btn_sossettingpage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/btn_sossetting"
                android:layout_gravity="center"
                android:visibility="visible"
                android:background="?attr/selectableItemBackgroundBorderless"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>