<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="medicine.example.com.dailyalert.sossetting.SosSetting"
    tools:showIn="@layout/activity_sos_setting">


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="@dimen/top_layout_margin"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/iv_logo"
            android:layout_marginTop="05dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/login"
            android:text="@string/sossettingmsg"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:theme="@style/AppTheme.Editext"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_sosname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sosname"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:singleLine="true"
                    android:clickable="false"
                    android:layout_marginTop="05dp"
                    android:layout_marginLeft="@dimen/top_layout_margin"
                    android:layout_marginRight="@dimen/top_layout_margin"
                    android:gravity="start|center"
                    android:theme="@style/AppTheme.Editext"
                    android:textSize="@dimen/textsize"
                    android:inputType="textCapWords|textEmailAddress"
                    android:imeOptions="actionNext"
                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:theme="@style/AppTheme.Editext"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_sosnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sosnumber"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:singleLine="true"
                    android:clickable="false"
                    android:maxLength="10"
                    android:layout_marginTop="05dp"
                    android:layout_marginLeft="@dimen/top_layout_margin"
                    android:layout_marginRight="@dimen/top_layout_margin"
                    android:gravity="start|center"
                    android:theme="@style/AppTheme.Editext"
                    android:textSize="@dimen/textsize"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    />

            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/roundedcurveedges"
                android:elevation="@dimen/elevation"
                android:layout_margin="@dimen/top_layout_margin">

                <Button
                    android:id="@+id/btn_sossubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/btn_signin"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    android:background="?attr/selectableItemBackgroundBorderless"/>

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


